@@ -97,7 +97,7 @@ p {
 /* Extra Small */
 @media only screen and (max-width: 576px) {
     h1 {
-        font-size: 2em;
+        font-size: 1.8em;
     }
 }
 
