@@ -91,3 +91,16 @@
 @media only screen and (max-width: 576px) {
 
 }
+
+/* Mobile Landscape */
+@media only screen and (max-width: 768px) and (max-height: 500px) {
+
+    .main-block-content {
+        transform: translateY(-65%);
+    }
+
+    .product-image {
+        display: none;
+    }
+
+}
