@@ -56,7 +56,7 @@
     <div class="container-fluid main-block">
         <div class="main-block-content">
             <div class="row">
-                <div class="product-image col-md-6 col-sm-6">
+                <div class="product-image col-md-6 col-sm-6 col-6">
                     <img src="img/weboost_drive.png" alt="weboost product" class="img-fluid">
                 </div>
             </div>
